--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: <todo>
+        image: us-east4-docker.pkg.dev/qwiklabs-gcp-02-74936814894b/my-repository/hello-cloudbuild-dev:v1.0
         ports:
         - containerPort: 8080
